--- a/index.html
+++ b/index.html
@@ -38,24 +38,23 @@
         </div>
       </div>
 
-      <div class="container-fluid" class="btn-dark">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
             <form class="btn-dark">
-              <p class="btn-dark">Filter Search</p>
+              <p >Filter Search</p>
             </form>
 
-            <ul class="list-group" class="btn-dark">
-              <li class="list-group-item" class="btn-dark">
+            <ul  class="btn-dark">
+              <li  class="btn-dark">
                 <label for="date">Enter Date</label>
                 <input type="text" placeholder="1/10/2010" id="datetime" />
 
               </li>
-              <li class="list-group-item" class="btn-dark">
+              <li  class="btn-dark">
                 <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
               </li>
             </ul>
-
 
           </div>
           <div class="col-md-9">
@@ -79,7 +78,7 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
       <script src="static/js/data.js"></script>
-      <script src="static/js/app.js"></script>
+      <script src="static/js/testing.js"></script>
 
 
 </body>
